xmonad.symlink/xmonad.errors

xmonad.hs:361:21: error:
    Not in scope: ‘W.toggleOrView’
    Module ‘XMonad.StackSet’ does not export ‘toggleOrView’.
    |
361 |       , (f, m) <- [(W.toggleOrView, 0), (W.shift, shiftMask)]
    |                     ^^^^^^^^^^^^^^
